add pagination, security, admin API
